--- a/Gravitybox.gFileSystem.Engine/Gravitybox.gFileSystem.Engine.csproj
+++ b/Gravitybox.gFileSystem.Engine/Gravitybox.gFileSystem.Engine.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Extensions.cs" />
     <Compile Include="FileEngine.cs" />
+    <Compile Include="FileHeader.cs" />
     <Compile Include="FileUtilities.cs" />
     <Compile Include="IFileManager.cs" />
     <Compile Include="Logger.cs" />
