Added a WCF service to wrap the FileManager

--- a/Gravitybox.gFileSystem.Manager/Gravitybox.gFileSystem.Manager.csproj
+++ b/Gravitybox.gFileSystem.Manager/Gravitybox.gFileSystem.Manager.csproj
@@ -65,7 +65,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="app.config" />
     <None Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
