--- a/Gravitybox.gFileSystem.Manager/Gravitybox.gFileSystem.Manager.csproj
+++ b/Gravitybox.gFileSystem.Manager/Gravitybox.gFileSystem.Manager.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
