removed old test harness added compression added in memory encryption

--- a/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
+++ b/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Polly, Version=5.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Polly.5.1.0\lib\net45\Polly.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -44,7 +47,11 @@
     <Compile Include="FileUtilities.cs" />
     <Compile Include="ISystemCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RetryHelper.cs" />
     <Compile Include="SystemConnection.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
