added client side events FileUpload and FileDownload for progress on server large files are finalized async so it does not timeout client service

--- a/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
+++ b/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FilePart.cs" />
+    <Compile Include="FileProgressEventArgs.cs" />
     <Compile Include="FileUtilities.cs" />
     <Compile Include="ISystemCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
