Made the file upload perform post processing async as not to tie up the clent. So when client service layer returns from "SaveFile", the file is not ready for immediate download. it will take a few seconds depending on file size.

--- a/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
+++ b/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileDataInfo.cs" />
     <Compile Include="FilePart.cs" />
     <Compile Include="FileProgressEventArgs.cs" />
     <Compile Include="FileUtilities.cs" />
