--- a/Gravitybox.gFileSystem.Service/Gravitybox.gFileSystem.Service.csproj
+++ b/Gravitybox.gFileSystem.Service/Gravitybox.gFileSystem.Service.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
     <Compile Include="SystemCore.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ProjectInstaller.resx">
@@ -100,6 +101,9 @@
       <DependentUpon>FileSystem.nhydrate</DependentUpon>
     </None>
     <None Include="InstallService.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="master.key">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="NLog.config">
