now unencrypted files never touch disk on client or server

--- a/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
+++ b/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
@@ -48,6 +48,7 @@
     <Compile Include="FileProgressEventArgs.cs" />
     <Compile Include="FileUtilities.cs" />
     <Compile Include="ISystemCore.cs" />
+    <Compile Include="OutfileItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetryHelper.cs" />
     <Compile Include="SystemConnection.cs" />
