--- a/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
+++ b/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
@@ -51,7 +51,9 @@
     <Compile Include="OutfileItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetryHelper.cs" />
+    <Compile Include="ServiceConnectionBase.cs" />
     <Compile Include="SystemConnection.cs" />
+    <Compile Include="TenantConnection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
