--- a/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
+++ b/Gravitybox.gFileSystem.Service.Common/Gravitybox.gFileSystem.Service.Common.csproj
@@ -48,6 +48,9 @@
     <Compile Include="FileProgressEventArgs.cs" />
     <Compile Include="FileUtilities.cs" />
     <Compile Include="ISystemCore.cs" />
+    <Compile Include="LongDirectory.cs" />
+    <Compile Include="LongFile.cs" />
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="OutfileItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetryHelper.cs" />
